--- a/packages/resume-builder/src/components/layouts/Layout.css
+++ b/packages/resume-builder/src/components/layouts/Layout.css
@@ -4,6 +4,24 @@
 	font-weight: 400;
 }
 
+@media screen {
+	.layout {
+		place-items: center;
+		padding: 2rem 0;
+	}
+}
+
+@media print {
+	body {
+		background-color: unset;
+	}
+
+	.layout {
+		place-items: normal;
+		padding: 0;
+	}
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-size: revert;
 	font-weight: revert;
